--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+.container {
+  width: 40%;
+  margin: 150px auto;
+  box-shadow: 0 0 5px #bfbebe;
+  border-radius: 5px;
+  
+}
+
+.container h2{
+  font-size: 40px;
   text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+textarea {
+  width: 500px;
+  height: 100px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.textBox{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.word-count {
+  
+  font-weight: bold;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
